--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,9 @@
 
 /* Your CSS Code here. */
+.box {
+	background : lightblue;
+	width : 300px;
+	padding : 50 px;
+	border :  15 px solid blue;
+	margin : 20 px;
+}
